--- a/hmwk4.html
+++ b/hmwk4.html
@@ -1,3 +1,34 @@
+<!OCTYPE html>
+<html>
+    <head>
+        <title> trying to figure this out</title>
+        </head>
+
+
+        <body>it Aint Easy But I'm Doing It. This Is The Hardest Class I've Ever Done But I Like It</body>
+        And I Pray That I've At Least Gotton This Part Done Correctly By My Self
+    </body>
+    
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <DOCTYPE html>
     <html lang="en">
         <head>
